syntax = "proto2";

package eflect.processing;

message EflectFootprint {
  required int64 timestamp = 1;
  required int64 thread_id = 2;
  required string thread_name = 3;
  // this causes the data to get really bloated; maybe use a map?
  required string component = 4;
  repeated string stack_trace = 5;
  required double energy = 6;
}

message EflectFootprints {
  repeated EflectFootprint footprint = 1;
}
